Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-37043

REG: QML WebView not rendering on ANGLE

XMLWordPrintable

    • 7a2d420d6675e08dfeff2388ce579dc54d4aa88a

      When using a QML WebView with a custom built Qt configured for ANGLE and MinGW,
      only a white Rectangle is rendered.
      The same code works on Qt 5.2.1 without ANGLE
      and on Qt 5.2.0 build with ANGLE and MinGW

      Steps to reproduce:
      1) build Qt with ANGLE and MinGW
      2) create a new QtQuick2 Project in QtCreator and the following main.qml:

      import QtQuick 2.2
      import QtWebKit 3.0
      
      Rectangle {
          width: 800
          height: 600
          color:"#ff0000"
          WebView {
              width: 600
              height: 400
      
              anchors.centerIn: parent
              url: "http://www.google.com"
          }
      }
      

      3) run...

        1. flickrview_angle.png
          flickrview_angle.png
          216 kB
        2. qtbug37043_qt53angle.stack
          39 kB
        3. qtbug37043_qt53angle.tasks
          4 kB
        4. qtbug37043.qml
          0.2 kB
        For Gerrit Dashboard: QTBUG-37043
        # Subject Branch Project Status CR V

            mibrunin Michael Bruning
            lkdem Ludger Krämer
            Votes:
            0 Vote for this issue
            Watchers:
            11 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes